<resources>
    <string name="app_name">Driver CIAO Rides</string>
    <string name="user_not_found">No users found</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="intro_description">You shall have received an OTP to the number +91********** you want to register with us.</string>
    <string name="book_a_taxi">Book a taxi</string>
    <string name="start_pooling">Start Pooling</string>
    <string name="travel_intercity">Travel Intercity</string>
    <string name="lets_go">Let\'s go!</string>
    <string name="verify">Verify</string>
    <string name="phone_number">Phone Number</string>
    <string name="login_msg">You shall have received an OTP to the number +91**********</string>
    <string name="hi_welcome_to">Hi, Welcome to</string>
    <string name="ciao_rides">CIAO Rides</string>
    <string name="otp_msg">Please wait. We will auto verify the OTP.</string>
    <string name="verify_msg">Auto verifying your OTP in</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_rides">My Rides</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_vehicles">My Vehicles</string>
    <string name="my_favourites">My Favourites</string>
    <string name="bank_details">Bank Details</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="policy_policy">Policy Policy</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="take_a_ride">Take a Ride</string>
    <string name="taxi">Taxi</string>
    <string name="intercity">Out Station</string>
    <string name="sharing">Sharing</string>
    <string name="your_location">Your location</string>
    <string name="search_for_destination">Search for destination</string>
    <string name="offer_a_ride">Offer a Ride</string>
    <string name="google_api_key1">AIzaSyBSaSzEI417kuNqInU-19QL1JhIr3nNX3M</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="favourites">Favourites</string>
    <string name="scheduled">Scheduled</string>
    <string name="search">Search</string>
    <string name="reschedule">Reschedule</string>
    <string name="have_a">HAVE A</string>
    <string name="happy_ride">HAPPY RIDE</string>
    <string name="with_us">WITH US</string>
    <string name="a_car">A Car</string>
    <string name="book_a_mini_suv_amp_more"><![CDATA[Book a mini,SUV & more]]></string>
    <string name="preferred_gender">Preferred Gender</string>
    <string name="both">Both</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="seats">Seats</string>
    <string name="a_bike">A Bike</string>
    <string name="book_a_bike_nearby">Book a bike nearby</string>
    <string name="an_auto">An Auto</string>
    <string name="book_an_auto_nearby">Book an auto nearby</string>
    <string name="book_now">Book Now</string>
    <string name="done">Done</string>
    <string name="no_results_found">No results found.</string>
    <string name="office">Office</string>
    <string name="other">Other</string>
    <string name="submit">Submit</string>
    <string name="title">Title</string>
    <string name="schedule_a_ride">Schedule a Ride</string>
    <string name="schedule">Schedule</string>
    <string name="total_payable">Total Payable</string>
    <string name="amount">Amount</string>
    <string name="tax">Tax</string>
    <string name="commision">Commission</string>
    <string name="cancellation_charges">Cancellation Charges</string>
    <string name="amount_per_head">Amount per Head</string>
    <string name="base_fare">Base fare</string>
    <string name="car_details">Car Details</string>
    <string name="seat_capacity">Seat capacity</string>
    <string name="distance">Distance</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="please_wait_we_are_in_the_process_of_finding_a_best_rider_for_you">Please wait we are in the process of finding a best rider for you</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="booked">Ride has been booked</string>
    <string name="support">Support</string>
    <string name="send_message">Send message</string>
    <string name="booking">Booking</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_bio">Add Bio</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="email_id">Email Id</string>
    <string name="srt_mobile">Mobile Number</string>
    <string name="alt_srt_mobile">Alternative Mobile Number</string>
    <string name="address_line_1">Address line 1</string>
    <string name="address_line_2">Address line 2</string>
    <string name="pincode">PinCode</string>
    <string name="id_verification">ID Verification</string>
    <string name="driving_licence">Driving Licence</string>
    <string name="enter_link_here">Enter Link Here</string>
    <string name="linkedin">LinkedIn</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="upload_image">Upload Image</string>
    <string name="passport">Passport</string>
    <string name="pan_card">PAN Card</string>
    <string name="adhar_card">Aadhaar card</string>
    <string name="save">save</string>
    <string name="view_public_profile">View public profile</string>
    <string name="address">Address</string>
    <string name="social_media_accounts">Social Media Accounts</string>
    <string name="click_to_add_here">Click to add here</string>
    <string name="reaches_in">Reaches in</string>
    <string name="cancel_ride_msg">Do you want to cancel the ride?</string>
    <string name="select_vehicle">Please select vehicle</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="payment">Payment</string>
    <string name="payments">Payments</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete ?</string>
    <string name="cancel">Cancel</string>
    <string name="verified">Verified</string>
    <string name="riders_available">Riders Available</string>
    <string name="schedule_now">Schedule Now</string>
    <string name="title_activity_image_upload">ImageUploadActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_vehicle_details">VehicleDetailsActivity</string>
    <string name="save_next"><![CDATA[Save & Next]]></string>
    <string name="select_type_of_vehicle">Select Type of Vehicle</string>
    <string name="add_a_vehicle">Add A Vehicle</string>
    <string name="select_brand">Select Brand</string>
    <string name="select_model">Select Model</string>
    <string name="click_to_add_vehicle_registration_image">Click to add vehicle registration image</string>
    <string name="click_to_add_vehicle_insurance_image">Click to add vehicle Insurance image</string>
    <string name="click_to_add_fitness_certificate_image">Click to add Fitness Certificate image</string>
    <string name="click_to_add_vehicle_permit_image">Click to add vehicle permit image</string>
    <string name="image">Image</string>
    <string name="camera">Camera</string>
    <string name="select_from_gallery">Gallery</string>
    <string name="upload_licence">Kindly upload front and back side Driving Licence</string>
    <string name="chat">Chat</string>
    <string name="enter_your_message">Message</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="car">Car</string>
    <string name="auto">Auto</string>
    <string name="bike">Bike</string>
    <string name="select_vehicle_type">Select Vehicle</string>
    <string name="check_availability">Check Availability</string>
    <string name="emergency">Emergency</string>
    <string name="received">Received</string>
    <string name="ride_details">Ride Details</string>
    <string name="title_activity_earnings">Earnings</string>
    <string name="this_week">This week</string>
    <string name="total_trips">Total Trips</string>
    <string name="receivable_amount">Receivable Amount</string>
    <string name="details">Details</string>
    <string name="pending_payments">Pending payments</string>
    <string name="credited">Credited</string>
    <string name="completed_payments">Completed Payments</string>
    <string name="change_password">Change Password</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="logout">Logout</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="inbox">Inbox</string>
    <string name="refer_friend">Refer Friends</string>
    <string name="refer_1">Earn upto Rs. 500 for a new user invite!</string>
    <string name="refer_2">Make upto 500 rs for each new driver you invite who complete 5 Trips.</string>
    <string name="share_your_link">Share link</string>
    <string name="previous_rides">Previous Rides</string>
    <string name="total_bookings">Total Bookings</string>
    <string name="start_ride">Start Ride</string>
    <string name="start">Start</string>
    <string name="total_earnings">Total Earnings</string>
    <string name="you_are_online_now">You are online now</string>
    <string name="finding_a_best_customers_for_you">Please wait we are in the process of finding a best customers for you</string>
    <string name="cancel_search">Cancel Search</string>
    <string name="pause_search">Pause Search</string>
    <string name="accept_ride">Accept Ride</string>
    <string name="reject">Reject</string>
    <string name="book_message">Congratulations! A new ride has been found</string>
    <string name="local_ride">Local Ride</string>
    <string name="call">Call</string>
    <string name="otp_confirm_message">Please confirm the OTP sent to customer</string>
    <string name="added_ride_msg">Congratulations! A new ride has been added</string>
    <string name="reached">Reached</string>
    <string name="pickup">Picked Up</string>
    <string name="complete_ride">Complete Ride</string>
    <string name="add_a_bank">Add a Bank</string>
    <string name="edit_bank">Edit  Bank Details</string>
    <string name="name_of_bank">Name of Bank</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="account_number">Account Number</string>
    <string name="ifsc_code">IFSC code</string>
    <string name="save_details">Save Details</string>
    <string name="model_name">Model Name</string>
    <string name="brand_name">Brand Name</string>
</resources>