<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <group android:id="@+id/group1">
            <item
                android:id="@+id/nav_my_rides"
                android:title="@string/my_rides" />
        </group>

        <group android:id="@+id/group2">
            <item
                android:id="@+id/nav_my_wallet"
                android:title="@string/my_wallet" />
        </group>
        <group android:id="@+id/group3">
            <item
                android:id="@+id/nav_my_vehicles"
                android:title="@string/my_vehicles" />
        </group>
        <group android:id="@+id/group4">
            <item
                android:id="@+id/nav_my_favourites"
                android:title="@string/my_favourites" />
        </group>
        <group android:id="@+id/group5">
            <item
                android:id="@+id/nav_bank_details"
                android:title="@string/bank_details" />
        </group>
        <group android:id="@+id/group6">
            <item
                android:id="@+id/nav_settings"
                android:title="@string/settings" />
        </group>
        <group android:id="@+id/group7">
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/about_us" />
        </group>
        <group android:id="@+id/group8">
            <item
                android:id="@+id/nav_terms_and_conditions"
                android:title="@string/terms_amp_conditions" />
        </group>
        <group android:id="@+id/group9">
            <item
                android:id="@+id/nav_policy_policy"
                android:title="@string/policy_policy" />
        </group>
    </group>
</menu>