<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_type_of_vehicle"
        android:textColor="@color/black" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tVVehicleType"
        style="@style/GlobalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@drawable/rounded_edittext_gray"
        android:drawableEnd="@drawable/ic_arrow_down"
        android:hint="@string/vehicle_type"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/select_brand"
        android:textColor="@color/black" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tVBrand"
        style="@style/GlobalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@drawable/rounded_edittext_gray"
        android:drawableEnd="@drawable/ic_arrow_down"
        android:hint="@string/brand_name"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp" />


    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/select_model"
        android:textColor="@color/black" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tVModelName"
        style="@style/GlobalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@drawable/rounded_edittext_gray"
        android:drawableEnd="@drawable/ic_arrow_down"
        android:hint="@string/model_name"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp" />

</LinearLayout>