<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_my_rides">

    <fragment
        android:id="@+id/nav_my_rides"
        android:name="com.ciaorides.ciaorides.view.activities.ui.home.HomeFragment"
        android:label="@string/my_rides"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_wallet"
        android:name="com.ciaorides.ciaorides.view.activities.ui.gallery.GalleryFragment"
        android:label="@string/my_wallet"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_my_vehicles"
        android:name="com.ciaorides.ciaorides.view.activities.ui.slideshow.SlideshowFragment"
        android:label="@string/my_vehicles"
        tools:layout="@layout/fragment_slideshow" />
</navigation>