<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLocation"
        style="@style/GlobalTextViewStyle"
        android:fontFamily="@font/inter_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:textColor="@color/black" />

    <RadioGroup
        android:id="@+id/radioFevGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/home" />

        <RadioButton
            android:id="@+id/radioOffice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/office" />

        <RadioButton
            android:id="@+id/radioOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:text="@string/other" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etOther"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext_gray"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/title"
        android:includeFontPadding="false"
        android:inputType="text"
        android:padding="@dimen/_10sdp"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@color/appBlue"
        android:fontFamily="@font/inter_medium"
        android:includeFontPadding="false"
        android:paddingStart="@dimen/_30sdp"
        android:paddingEnd="@dimen/_30sdp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:visibility="gone"
        app:cornerRadius="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent" />


</LinearLayout>