<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/grayLight"
    >
    <androidx.appcompat.widget.AppCompatTextView
        style="@style/GlobalTextViewBoldStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/social_media_accounts"
        android:textSize="@dimen/_12ssp" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/GlobalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/facebook" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtFacebook"
        style="@style/GlobalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@drawable/rounded_edittext_white"
        android:hint="@string/enter_link_here"
        android:padding="@dimen/_10sdp" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/GlobalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/instagram" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtInstagram"
        style="@style/GlobalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@drawable/rounded_edittext_white"
        android:hint="@string/enter_link_here"
        android:padding="@dimen/_10sdp" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/GlobalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/linkedin" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtLinkedin"
        style="@style/GlobalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@drawable/rounded_edittext_white"
        android:hint="@string/enter_link_here"
        android:padding="@dimen/_10sdp" />

</LinearLayout>