<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grayLight"
    android:orientation="vertical"
    >
    <TextView
        style="@style/GlobalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2sdp"
        android:text="@string/add_bio" />

    <EditText
        android:id="@+id/etBio"
        style="@style/GlobalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:gravity="top|start"
        android:background="@drawable/rounded_edittext_white"
        android:padding="@dimen/_6sdp" />

    <TextView
        style="@style/GlobalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/edtName"
        style="@style/GlobalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@drawable/rounded_edittext_white"
        android:padding="@dimen/_10sdp" />

    <TextView
        style="@style/GlobalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/date_of_birth" />

    <EditText
        android:id="@+id/edtDOB"
        style="@style/GlobalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@drawable/rounded_edittext_white"
        android:padding="@dimen/_10sdp" />

    <TextView
        style="@style/GlobalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/gender" />

    <EditText
        android:id="@+id/ediGender"
        style="@style/GlobalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@drawable/rounded_edittext_white"
        android:padding="@dimen/_10sdp" />

    <TextView
        style="@style/GlobalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/email_id" />

    <EditText
        android:id="@+id/edtEmail"
        style="@style/GlobalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@drawable/rounded_edittext_white"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_10sdp" />

    <TextView
        style="@style/GlobalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/srt_mobile" />

    <EditText
        android:id="@+id/edtMobile"
        style="@style/GlobalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@drawable/rounded_edittext_white"
        android:inputType="number"
        android:padding="@dimen/_10sdp" />

</LinearLayout>