<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        style="@style/GlobalTextViewBoldStyle"
        android:text="@string/you_are_online_now"
        android:textColor="@color/green"
        android:textSize="@dimen/_15sdp" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp" />


    <TextView
        style="@style/GlobalTextViewStyle"
        android:gravity="center"
        android:text="@string/finding_a_best_customers_for_you"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/progree_ing" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:weightSum="2">

        <Button
            android:id="@+id/btnCancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_weight="1"
            android:fontFamily="@font/inter_medium"
            android:text="@string/cancel_search"
            android:textAllCaps="false"
            android:textColor="@color/appBlue"
            app:cornerRadius="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:strokeColor="@color/appBlue" />

        <Button
            android:id="@+id/btnPauseSearch"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_weight="1"
            android:backgroundTint="@color/appBlue"
            android:fontFamily="@font/inter_medium"
            android:text="@string/pause_search"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent" />


    </LinearLayout>

</LinearLayout>