<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grayLight"
    android:orientation="vertical"
    >
    <TextView
        style="@style/GlobalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/address_line_1" />

    <EditText
        android:id="@+id/edtAddress_1"
        style="@style/GlobalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@drawable/rounded_edittext_white"
        android:padding="@dimen/_10sdp" />

    <TextView
        style="@style/GlobalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/address_line_2" />

    <EditText
        android:id="@+id/edtAddress_2"
        style="@style/GlobalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@drawable/rounded_edittext_white"
        android:padding="@dimen/_10sdp" />

    <TextView
        style="@style/GlobalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/pincode" />

    <EditText
        android:id="@+id/edtPincode"
        style="@style/GlobalTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@drawable/rounded_edittext_white"
        android:inputType="number"
        android:padding="@dimen/_10sdp" />

</LinearLayout>